[Mac] Nil out content shell window delegate on close

On TouchBar Macs, the touch bar provider system overretains
windows that are closed while the application is backgrounded.
See crbug.com/667274 for details.

In content shell, this leaves the window with a dangling delegate
pointer and can cause crashes in layout tests.

BUG=719830

Review-Url: https://codereview.chromium.org/2872903004
Cr-Commit-Position: refs/heads/master@{#470565}